samples/_failures_safe/1761361857_a404dc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_919f0696.c: In function ‘main’:
./samples/SAFE/__tmp_919f0696.c:148:5: error: expected declaration or statement at end of input
  148 |     } else {
      |     ^
./samples/SAFE/__tmp_919f0696.c:148:5: error: expected declaration or statement at end of input
